# weatherpy

./: LICENSE.txt  README.md  main.py  pyproject.toml  readme.md  requirements.txt  weather.py
src/weatherpy/: __about__.py  main.py  weather.py
