[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weatherpy"
dynamic = ["version"]
description = 'Web scraping weather cli in python'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Hyde", email = "seokjinyoo0716@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer",
  "lxml",
  "geopy",
]

[project.urls]
Documentation = "https://github.com/unknown/weatherpy#readme"
Issues = "https://github.com/unknown/weatherpy/issues"
Source = "https://github.com/unknown/weatherpy"

[tool.hatch.version]
path = "src/weatherpy/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/weatherpy tests}"

[tool.coverage.run]
source_pkgs = ["weatherpy", "tests"]
branch = true
parallel = true
omit = [
  "src/weatherpy/__about__.py",
]

[tool.coverage.paths]
weatherpy = ["src/weatherpy", "*/weatherpy/src/weatherpy"]
tests = ["tests", "*/weatherpy/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
